--- a/01. Counter/index.html
+++ b/01. Counter/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Counter</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-   
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1>Counter in Javascript</h1>
 
-
-<script src="script.js"></script>
-</body>
+    <h2 id="counter-screen">0</h2>
+    <div>
+      <button id="incrementValue" class="counter-buttons">+</button>
+      <button id="decrementValue" class="counter-buttons">-</button>
+    </div>
+    <div>
+      <button id="resetValue" class="counter-buttons">Reset</button>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
